// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getComponentCss() should return correct css for direction: down, isOpen: false, state: none, disabled: false, filter: false, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}"
`;

exports[`getComponentCss() should return correct css for direction: down, isOpen: false, state: none, disabled: false, filter: true, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  position: absolute;
  inset: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  padding: 8px 16px;
  padding-inline-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 0;
  border-radius: 4px;
  opacity: 0;
  overflow-wrap: break-word;
  hyphens: auto;
  text-indent: 0;
  cursor: text;
  color: #010205;
  background: #FFF;
}
input::placeholder {
  opacity: 1;
  color: #010205;
}
input::-webkit-input-placeholder {
  opacity: 1;
  color: #010205;
}
input::-moz-placeholder {
  opacity: 1;
  color: #010205;
}
input:not(:disabled):focus {
  opacity: 1;
}
input+span {
  position: absolute;
  inset: 0;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  pointer-events: all;
  cursor: pointer;
  border: 2px solid #6B6D70;
  border-radius: 4px;
}
input:not(:disabled):focus+span, input:not(:disabled):focus~ ul {
  border-color: #010205;
}
@media(hover:hover) {
  input:not(:disabled)+span:hover {
    border-color: #010205;
  }
  input:not(:disabled):hover+span, input:not(:disabled):hover~ul {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}"
`;

exports[`getComponentCss() should return correct css for direction: down, isOpen: false, state: none, disabled: true, filter: false, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}"
`;

exports[`getComponentCss() should return correct css for direction: down, isOpen: false, state: none, disabled: true, filter: true, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  position: absolute;
  inset: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  padding: 8px 16px;
  padding-inline-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 0;
  border-radius: 4px;
  opacity: 0;
  overflow-wrap: break-word;
  hyphens: auto;
  text-indent: 0;
  cursor: not-allowed;
  color: #010205;
  background: #FFF;
}
input::placeholder {
  opacity: 1;
  color: #949598;
}
input::-webkit-input-placeholder {
  opacity: 1;
  color: #949598;
}
input::-moz-placeholder {
  opacity: 1;
  color: #949598;
}
input:not(:disabled):focus {
  opacity: 1;
}
input+span {
  position: absolute;
  inset: 0;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  pointer-events: all;
  cursor: not-allowed;
  border: 2px solid #6B6D70;
  border-radius: 4px;
}
input:not(:disabled):focus+span, input:not(:disabled):focus~ ul {
  border-color: #010205;
}
@media(hover:hover) {
  input:not(:disabled)+span:hover {
    border-color: #010205;
  }
  input:not(:disabled):hover+span, input:not(:disabled):hover~ul {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}"
`;

exports[`getComponentCss() should return correct css for direction: down, isOpen: true, state: none, disabled: false, filter: false, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #010205;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  top: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-top: 1px solid #6B6D70 !important;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: down, isOpen: true, state: none, disabled: false, filter: false, isNativePopoverCase: true and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #010205;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  top: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-top: 1px solid #6B6D70 !important;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.popover {
  position: absolute;
  border: none;
  background: none;
  pointer-events: all;
  padding: 0;
  margin: 0;
  overflow: initial;
}
.popover:-internal-popover-in-top-layer::backdrop {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: down, isOpen: true, state: none, disabled: false, filter: true, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  position: absolute;
  inset: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  padding: 8px 16px;
  padding-inline-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 0;
  border-radius: 4px;
  opacity: 0;
  overflow-wrap: break-word;
  hyphens: auto;
  text-indent: 0;
  cursor: text;
  color: #010205;
  background: #FFF;
}
input::placeholder {
  opacity: 1;
  color: #010205;
}
input::-webkit-input-placeholder {
  opacity: 1;
  color: #010205;
}
input::-moz-placeholder {
  opacity: 1;
  color: #010205;
}
input:not(:disabled):focus {
  opacity: 1;
}
input+span {
  position: absolute;
  inset: 0;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  pointer-events: all;
  cursor: pointer;
  border: 2px solid #010205;
  border-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
input:not(:disabled):focus+span, input:not(:disabled):focus~ ul {
  border-color: #010205;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  top: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-top: 1px solid #6B6D70 !important;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  input:not(:disabled)+span:hover {
    border-color: #010205;
  }
  input:not(:disabled):hover+span, input:not(:disabled):hover~ul {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: down, isOpen: true, state: none, disabled: true, filter: false, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #010205;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  top: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-top: 1px solid #6B6D70 !important;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: down, isOpen: true, state: none, disabled: true, filter: true, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  position: absolute;
  inset: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  padding: 8px 16px;
  padding-inline-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 0;
  border-radius: 4px;
  opacity: 0;
  overflow-wrap: break-word;
  hyphens: auto;
  text-indent: 0;
  cursor: not-allowed;
  color: #010205;
  background: #FFF;
}
input::placeholder {
  opacity: 1;
  color: #949598;
}
input::-webkit-input-placeholder {
  opacity: 1;
  color: #949598;
}
input::-moz-placeholder {
  opacity: 1;
  color: #949598;
}
input:not(:disabled):focus {
  opacity: 1;
}
input+span {
  position: absolute;
  inset: 0;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  pointer-events: all;
  cursor: not-allowed;
  border: 2px solid #010205;
  border-radius: 4px;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}
input:not(:disabled):focus+span, input:not(:disabled):focus~ ul {
  border-color: #010205;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  top: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-top: 1px solid #6B6D70 !important;
  border-bottom-left-radius: 4px;
  border-bottom-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  input:not(:disabled)+span:hover {
    border-color: #010205;
  }
  input:not(:disabled):hover+span, input:not(:disabled):hover~ul {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: false, state: none, disabled: false, filter: false, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: false, state: none, disabled: false, filter: true, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  position: absolute;
  inset: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  padding: 8px 16px;
  padding-inline-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 0;
  border-radius: 4px;
  opacity: 0;
  overflow-wrap: break-word;
  hyphens: auto;
  text-indent: 0;
  cursor: text;
  color: #010205;
  background: #FFF;
}
input::placeholder {
  opacity: 1;
  color: #010205;
}
input::-webkit-input-placeholder {
  opacity: 1;
  color: #010205;
}
input::-moz-placeholder {
  opacity: 1;
  color: #010205;
}
input:not(:disabled):focus {
  opacity: 1;
}
input+span {
  position: absolute;
  inset: 0;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  pointer-events: all;
  cursor: pointer;
  border: 2px solid #6B6D70;
  border-radius: 4px;
}
input:not(:disabled):focus+span, input:not(:disabled):focus~ ul {
  border-color: #010205;
}
@media(hover:hover) {
  input:not(:disabled)+span:hover {
    border-color: #010205;
  }
  input:not(:disabled):hover+span, input:not(:disabled):hover~ul {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: false, state: none, disabled: true, filter: false, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #6B6D70;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: false, state: none, disabled: true, filter: true, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  position: absolute;
  inset: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  padding: 8px 16px;
  padding-inline-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 0;
  border-radius: 4px;
  opacity: 0;
  overflow-wrap: break-word;
  hyphens: auto;
  text-indent: 0;
  cursor: not-allowed;
  color: #010205;
  background: #FFF;
}
input::placeholder {
  opacity: 1;
  color: #949598;
}
input::-webkit-input-placeholder {
  opacity: 1;
  color: #949598;
}
input::-moz-placeholder {
  opacity: 1;
  color: #949598;
}
input:not(:disabled):focus {
  opacity: 1;
}
input+span {
  position: absolute;
  inset: 0;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  pointer-events: all;
  cursor: not-allowed;
  border: 2px solid #6B6D70;
  border-radius: 4px;
}
input:not(:disabled):focus+span, input:not(:disabled):focus~ ul {
  border-color: #010205;
}
@media(hover:hover) {
  input:not(:disabled)+span:hover {
    border-color: #010205;
  }
  input:not(:disabled):hover+span, input:not(:disabled):hover~ul {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: true, state: none, disabled: false, filter: false, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #010205;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  bottom: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-bottom: 1px solid #6B6D70 !important;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: true, state: none, disabled: false, filter: false, isNativePopoverCase: true and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #010205;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  bottom: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-bottom: 1px solid #6B6D70 !important;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.popover {
  position: absolute;
  border: none;
  background: none;
  pointer-events: all;
  padding: 0;
  margin: 0;
  overflow: initial;
}
.popover:-internal-popover-in-top-layer::backdrop {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: true, state: none, disabled: false, filter: true, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  position: absolute;
  inset: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  padding: 8px 16px;
  padding-inline-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 0;
  border-radius: 4px;
  opacity: 0;
  overflow-wrap: break-word;
  hyphens: auto;
  text-indent: 0;
  cursor: text;
  color: #010205;
  background: #FFF;
}
input::placeholder {
  opacity: 1;
  color: #010205;
}
input::-webkit-input-placeholder {
  opacity: 1;
  color: #010205;
}
input::-moz-placeholder {
  opacity: 1;
  color: #010205;
}
input:not(:disabled):focus {
  opacity: 1;
}
input+span {
  position: absolute;
  inset: 0;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  pointer-events: all;
  cursor: pointer;
  border: 2px solid #010205;
  border-radius: 4px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
input:not(:disabled):focus+span, input:not(:disabled):focus~ ul {
  border-color: #010205;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  bottom: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-bottom: 1px solid #6B6D70 !important;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  input:not(:disabled)+span:hover {
    border-color: #010205;
  }
  input:not(:disabled):hover+span, input:not(:disabled):hover~ul {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: true, state: none, disabled: true, filter: false, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
button {
  position: absolute;
  inset: 0;
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
  background: transparent;
  border: 2px solid #010205;
  border-radius: 4px;
  outline: 0;
  cursor: pointer;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
button:focus, button:focus ~ ul {
  border-color: #010205;
}
button:disabled {
  cursor: not-allowed;
  border-color: #949598;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  bottom: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-bottom: 1px solid #6B6D70 !important;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  button:not(:disabled):not(:focus):hover {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;

exports[`getComponentCss() should return correct css for direction: up, isOpen: true, state: none, disabled: true, filter: true, isNativePopoverCase: false and theme: light 1`] = `
":host {
  display: block;
  position: relative;
}
:not(:defined,[data-ssr]) {
  visibility: hidden;
}
input {
  display: block;
  position: absolute;
  inset: 2px;
  width: calc(100% - 4px);
  height: calc(100% - 4px);
  z-index: 1;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  margin: 0;
  padding: 8px 16px;
  padding-inline-end: calc(9px + 16px / 2 + (calc(6px + 2.125ex) + 4px * 2) * 1);
  outline: 0;
  -webkit-appearance: none;
  appearance: none;
  box-sizing: border-box;
  border: 0;
  border-radius: 4px;
  opacity: 0;
  overflow-wrap: break-word;
  hyphens: auto;
  text-indent: 0;
  cursor: not-allowed;
  color: #010205;
  background: #FFF;
}
input::placeholder {
  opacity: 1;
  color: #949598;
}
input::-webkit-input-placeholder {
  opacity: 1;
  color: #949598;
}
input::-moz-placeholder {
  opacity: 1;
  color: #949598;
}
input:not(:disabled):focus {
  opacity: 1;
}
input+span {
  position: absolute;
  inset: 0;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  pointer-events: all;
  cursor: not-allowed;
  border: 2px solid #010205;
  border-radius: 4px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}
input:not(:disabled):focus+span, input:not(:disabled):focus~ ul {
  border-color: #010205;
}
[role="listbox"] {
  display: flex;
  flex-direction: column;
  gap: 8px;
  position: var(--p-internal-dropdown-position, absolute);
  padding: 6px;
  margin: 0;
  background: #FFF;
  font: normal normal 400 1rem/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  overflow-wrap: break-word;
  hyphens: auto;
  color: #535457;
  z-index: 10;
  left: 0;
  right: 0;
  bottom: calc(100% - 2px);
  box-sizing: border-box;
  max-height: 416px;
  overflow-y: auto;
  -webkit-overflow-scrolling: touch;
  scroll-behavior: smooth;
  border: 2px solid #010205;
  border-bottom: 1px solid #6B6D70 !important;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  scrollbar-width: thin;
  scrollbar-color: auto;
  transition: border-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
  transform: translate3d(0,0,0);
}
@media(hover:hover) {
  input:not(:disabled)+span:hover {
    border-color: #010205;
  }
  input:not(:disabled):hover+span, input:not(:disabled):hover~ul {
    border-color: #010205;
  }
}

.sr-text {
  display: none;
}
.option {
  display: flex;
  justify-content: space-between;
  gap: 12px;
  padding: 8px 12px;
  flex: 1 0 calc(calc(6px + 2.125ex) + 8px * 2);
  cursor: pointer;
  text-align: start;
  word-break: break-word;
  box-sizing: border-box;
  border-radius: 4px;
  transition: background-color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1), color var(--p-transition-duration, 0.25s) cubic-bezier(0.25,0.1,0.25,1);
}
.option[role=status] {
  cursor: not-allowed;
}
.option__sr {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
}
.option--highlighted {
  background: #D8D8DB;
}
.option--selected {
  cursor: default;
  pointer-events: none;
  background: #EEEFF2;
}
.option--highlighted, .option--selected {
  color: #010205;
}
.option--disabled {
  cursor: not-allowed;
  color: #949598;
}
.option--hidden {
  display: none;
}
.option--indent {
  padding-left: 28px;
}
.optgroup {
  color: #010205;
  display: block;
  padding: 8px 12px;
  font-size: clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem);
  font-weight: 600;
}
.optgroup--hidden {
  display: none;
}
.optgroup--disabled {
  color: #949598;
}
@media(hover:hover) {
  .option:not([aria-disabled]):not(.option--disabled):not([role=status]):hover {
    color: #010205;
    background: #D8D8DB;
  }
}
"
`;
